Added form for emai

--- a/index.html
+++ b/index.html
@@ -311,7 +311,30 @@
             <div class="space"></div>
             <div id="sendmessage">Your message has been sent. Thank you!</div>
             <div id="errormessage"></div>
-            <form action="" method="post" role="form" class="contactForm">
+            <form action="https://formspree.io/mirvhin143@gmail.com" method="POST">
+              <div class="form-group">
+                <input type="text" name="name" class="form-control br-radius-zero" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                <div class="validation"></div>
+              </div>
+              <div class="form-group">
+                <input type="email" class="form-control br-radius-zero" name="_replyto" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                <div class="validation"></div>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control br-radius-zero" name="contact" id="contact" placeholder="Contact" data-rule="minlen:4" data-msg="Please enter at least 8 chars of contact" />
+                <div class="validation"></div>
+              </div>
+              <div class="form-group">
+                <textarea class="form-control br-radius-zero" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                <div class="validation"></div>
+              </div>
+
+              <div class="form-action">
+                <button type="submit" class="btn background-blue btn-form">Send Message</button>
+              </div>
+            </form>
+
+            <!-- <form action="" method="post" role="form" class="contactForm">
               <div class="form-group">
                 <input type="text" name="name" class="form-control br-radius-zero" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                 <div class="validation"></div>
@@ -332,7 +355,8 @@
               <div class="form-action">
                 <button type="submit" class="btn background-blue btn-form">Send Message</button>
               </div>
-            </form>
+            </form> -->
+            
           </div>
         </div>
       </div>
